--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-.so_basic{
+.so_basic, .pickFunc, .items_test1{
 
     display: block;
     min-width: 350px;
     max-width: 600px;
-    min-height: 350px;
+    min-height: 50px;
     height: auto;
     margin: 0 auto;
     padding: 6px 6px;
@@ -19,9 +19,10 @@
 
     font-family: "Roboto", serif;
 
-    background-color: #29235c;
-    color: white;
+    background-color: #5d5d5d;
+    color: black;
     box-sizing: border-box;
+    text-align: center;
 }
 
 #logo{
@@ -46,6 +47,22 @@
     box-sizing: border-box;
 }
 
+textarea {
+
+    margin-top: 15px;
+
+    min-width: 250px;
+    height: 35px;
+    overflow: hidden;
+    resize: none;
+    
+    margin-bottom: 3px;
+    box-sizing: border-box;
+
+    font-family: "Quicksand";
+    font-size: 12px;
+}
+
 #title{
 
     font-weight: bold;
@@ -53,23 +70,16 @@
     letter-spacing: 3px;
     margin-bottom: 36px;
     box-sizing: border-box;
+    text-align: center;
 
 }
 
-#pickFunc, #pickAmou{
 
-    margin: 9px auto;
 
-    display: flex;
-    flex-flow: column;
-
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-}
-
-label{
-    padding-bottom: 3px;
+label, .emi{
+    padding-bottom: 6px;
+    font-weight: bold;
+    letter-spacing: 1.69px;
 }
 
 button {
@@ -89,6 +99,7 @@ button {
 
     margin-top: 6px;
     margin-bottom: 3px;
+    visibility: visible !important;
 
 }
 
@@ -97,8 +108,9 @@ button:hover, button::selection {
 
 }
 
-input{
+input, #cal21, textarea{
     text-align: center;
+    padding-top: 8px;
 }
 
 #answer {
